@@ -72,6 +72,7 @@ TODO LIST :
  - imports cleaned up, source file copyright & license header added
  - fix : ls on an empty directory was returning a collection containing an empty string
  - fix : SSHFtp.receive was not flushing...  receiveNcompress was broken with SSHFtp, now it is OK.
+ - fix : break on timeout may block. resultsQueue.poll with timeout instead of a forever resultsQueue.take
  - new method in TransfertOperations : putFromStream(data: java.io.InputStream, howmany:Int, remoteDestination: String)
  - jsch 0.1.50
  - sbteclipse-plugin 2.2.0
